--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "getimg-client",
   "version": "1.0.0",
-  "description": "",
+  "description": "getimg.ai JS Client",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "format:ts:prettier": "prettier --write src/**"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["getimg client"],
+  "author": "Enes Can Gunes",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/enescang/getimg-client.git"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/enescang/getimg-client#readme",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "eslint": "^9.17.0",
