--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "esModuleInterop": true,
     "target": "es6",
     "moduleResolution": "node",
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "declaration": true,
   },
   "lib": [
     "es2015"
